--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microlink/react": "4.4.7",
     "bootstrap": "4.4.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -10,7 +11,8 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
     "reactstrap": "8.1.1",
-    "redux": "4.0.4"
+    "redux": "4.0.4",
+    "styled-components": "4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
