--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@microlink/react": "4.4.7",
     "bootstrap": "4.4.1",
+    "firebase": "7.5.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
